2008-06-17  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-dbus.c: Improved the
	tracker_dbus_async_queue_to_strv() function so it doesn't crash
	when handling large numbers of files.

2008-06-17  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-monitor.c: Turned off debugging.

2008-06-17  Martyn Russell  <martyn@imendio.com>

	* data/dbus/tracker-indexer.xml:
	* src/libtracker-common/tracker-dbus.c:
	(tracker_dbus_async_queue_to_strv): Don't wait if there is no data
	in the async queue with g_async_queue_timed_pop().
	
	* src/tracker-indexer/tracker-indexer.[ch]: Added functions to be
	notified of created, deleted or updated files from the daemon.
	
	* src/trackerd/tracker-crawler.c: Don't block when shutting down
	by calling g_async_queue_pop() on an empty queue.

	* src/trackerd/tracker-monitor.c: Push all events to the indexer
	after queueing them first.

2008-06-17  Philip Van Hoof  <pvanhoof@gnome.org>

	* tests/scripts/dummy_data_start.sh.in:
	* tests/scripts/xdg_dirs.source:
	* tests/scripts/xdg_dirs.unsource:
	* tests/scripts/dummy_data_stop.sh.in:
	* tests/scripts/data/email-contents.sql:
	* tests/scripts/data/file-meta.sql:
	* tests/scripts/data/common.sql:
	* tests/scripts/data/file-contents.sql:
	* tests/scripts/data/email-meta.sql:
	* tests/scripts/data/xesam.sql:
	* configure.ac:

	Added dummy test data for the unit tests

2008-06-17  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/tracker-indexer.c:
	* src/trackerd/tracker-crawler.c:
	* src/trackerd/tracker-main.c: Use the config initial_sleep
	setting for the daemon only, not the indexer, this way we don't
	wait for the indexer to be "running".

2008-06-17  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-hal.c:
	* src/libtracker-common/tracker-log.c:
	* src/libtracker-common/tracker-nfs-lock.c:
	* src/libtracker/tracker-files.c: 
	* src/libtracker/tracker-get-meta-for-folder.c:
	* src/libtracker/tracker-query.c: